tests/requests/invalid/002.py
from gunicorn import InvalidRequestLine
request = InvalidRequestLine
